fix overlapping sections

--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@import"tailwindcss/base";
+@import"tailwindcss/components";
+@import"tailwindcss/utilities";
+
+@font-face {
+  font-family: "Libre Baskerville";
+  src: url("../public/fonts/LibreBaskerville-Regular.ttf");
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scrollbar-width: none;
-}
 
-main {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
-  /* height: 100vh; */
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-@layer components {
-  .debug {
-    border: 1px solid red;
-  }
-}
